[TASK] Move the exampleBox code into a mixin and fix the bottom spacing for the codeExample box

--- a/Assets/Sass/Molecules/_CodeExample.scss
+++ b/Assets/Sass/Molecules/_CodeExample.scss
@@ -1,16 +1,11 @@
-.exampleBox {
-  margin-bottom: 1em;
-}
-
-pre[class*="language-"],
-.exampleBox {
+@mixin exampleBox($bottomPadding: 1em) {
   padding: 1em;
-  margin-bottom: 3em;
+  margin-bottom: 1em;
   border-radius: 2px;
   background: 0;
   box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.1), 0 1px 2px rgba(63, 63, 68, 0.1);
 }
-pre[class*="language-"] > code {
-  background: 0;
-}
 
+.exampleBox {
+  @include exampleBox();
+}
